--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   width: 90%;
   margin: auto;
   min-width: 375px;
-  max-width: 1440px;
+  max-width: 1340px;
 }
 a {
   text-decoration: none;
@@ -58,48 +58,156 @@ header {
 }
 
 nav {
-  /* display: flex; */
-  padding: 1em;
+  padding: 2em;
   text-align: center;
-  align-items: center;
-  flex-direction: column;
   position: absolute;
   z-index: 1000;
   top: 15vh;
   width: 100%;
   background-color: var(--Dark-Violet);
   border-radius: 15px;
-  box-shadow: 0.1px 0.1px 1px rgb(228, 227, 227);
 }
 .nav-links {
-  /* display: flex; */
-  flex-direction: column;
-  align-items: center;
   list-style: none;
-  border-bottom: 1px solid var(--Gray);
+  border-bottom: 0.1px solid rgb(156, 156, 156);
 }
 .nav-links li {
-  margin: 2em 0;
+  margin: 2em 0 2em;
 }
-.nav-links li a {
+nav a {
   color: white;
   font-size: 1.1rem;
   font-weight: 500;
 }
-
+.nav-links-extreme {
+  display: flex;
+  flex-direction: column;
+}
+.nav-links-extreme > * {
+  margin: 1em 0 0.8em 0;
+}
+.primary-btn-link {
+  width: 100%;
+  padding: 0.5em 0;
+  border-radius: 50px;
+  background-color: var(--Cyan);
+}
 .burger {
   position: relative;
   z-index: 2000;
   margin-top: 5px;
-  transition: transform 0.3s;
+  transition: transform 0.2s;
   cursor: pointer;
 }
 .burger div {
   width: 26px;
   height: 4px;
   background-color: var(--Grayish-Violet);
-  transition: all 0.2s 0.3s ease-out;
+  transition: all 0.2s ease-out;
 }
 .burger div:not(:first-of-type) {
   margin-top: 3px;
+}
+.move .stick1,
+.move .sick3 {
+  opacity: 0.3;
+}
+.move .stick2 {
+  transform: translateX(-5px);
+}
+
+@media (min-width: 960px) {
+  nav {
+    position: initial;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    background-color: inherit;
+    width: calc(100% - 250px);
+  }
+
+  .burger {
+    display: none;
+  }
+  .nav-links,
+  .nav-links-extreme {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: none;
+  }
+
+  .nav-links li,
+  .nav-links-extreme > * {
+    margin: 0 1em;
+  }
+  nav a {
+    color: var(--Grayish-Violet);
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+  .primary-btn-link {
+    padding: 0.6em 1.5em;
+    color: white;
+  }
+}
+/* ------------------------------------------------------------------------- */
+
+/* hero section styles */
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* width: 92%; */
+  margin: auto;
+  /* padding: 1em; */
+}
+.hero-section-image {
+  width: 100%;
+  order: -1;
+}
+.hero-section-image img {
+  width: 100%;
+  height: 100%;
+}
+.hero-section-content-header {
+  font-size: 3.7rem;
+  font-weight: 800;
+  line-height: 1.3;
+  margin: 0.7em 0 0.4em;
+}
+.hero-section-content,
+.hero-section-content-secondary {
+  text-align: center;
+}
+
+.hero-section-content-secondary {
+  font-size: 1.8rem;
+  line-height: 1.7;
+  color: var(--Dark-Grayish-Blue);
+}
+.primary-btn-link-mod {
+  display: inline-block;
+  margin: 2.5em auto;
+}
+@media (min-width: 760px) {
+  .hero-section-content,
+  .hero-section-content-secondary {
+    text-align: left;
+  }
+  .hero {
+    flex-direction: row;
+    align-items: center;
+    height: 89vh;
+  }
+  .hero-section-image {
+    order: 1;
+    max-width: 600px;
+  }
+  .hero-section-content-header {
+    font-size: 4.5rem;
+    margin: 0em 0 0.5em;
+  }
 }
