--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,9 @@ a {
   text-decoration: none;
 }
 
-* {
+/* * {
   border: 1px solid red;
-}
+} */
 
 /* header styles  */
 header {
@@ -66,6 +66,7 @@ nav {
   width: 100%;
   background-color: var(--Dark-Violet);
   border-radius: 15px;
+  display: none;
 }
 .nav-links {
   list-style: none;
@@ -155,59 +156,39 @@ nav a {
 /* ------------------------------------------------------------------------- */
 
 /* hero section styles */
-
 .hero {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* width: 92%; */
-  margin: auto;
-  /* padding: 1em; */
+}
+.hero-section-content {
+  text-align: center;
+}
+.hero-section-content-header {
+  font-size: 2em;
+  font-weight: 800;
+  line-height: 1.2;
+  min-width: 376px;
+  margin: 1em 0;
+}
+.hero-section-content-secondary {
+  color: var(--Gray);
+  font-size: 0.9rem;
+  font-weight: 500;
+  min-width: 376px;
 }
 .hero-section-image {
   width: 100%;
+  /* height: 360px; */
   order: -1;
 }
 .hero-section-image img {
   width: 100%;
   height: 100%;
 }
-.hero-section-content-header {
-  font-size: 3.7rem;
-  font-weight: 800;
-  line-height: 1.3;
-  margin: 0.7em 0 0.4em;
-}
-.hero-section-content,
-.hero-section-content-secondary {
-  text-align: center;
-}
-
-.hero-section-content-secondary {
-  font-size: 1.8rem;
-  line-height: 1.7;
-  color: var(--Dark-Grayish-Blue);
-}
 .primary-btn-link-mod {
   display: inline-block;
-  margin: 2.5em auto;
-}
-@media (min-width: 760px) {
-  .hero-section-content,
-  .hero-section-content-secondary {
-    text-align: left;
-  }
-  .hero {
-    flex-direction: row;
-    align-items: center;
-    height: 89vh;
-  }
-  .hero-section-image {
-    order: 1;
-    max-width: 600px;
-  }
-  .hero-section-content-header {
-    font-size: 4.5rem;
-    margin: 0em 0 0.5em;
-  }
+  padding: 0.8em 1.3em;
+  margin: 1.5em 0;
+  color: white;
+  font-weight: 700;
 }
