--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@
   --Very-Dark-Blue: hsl(255, 11%, 22%);
   --Very-Dark-Violet: hsl(260, 8%, 14%);
   font-size: 18px;
-  width: 100wh;
 }
 
 *::after,
@@ -37,9 +36,9 @@ a {
   text-decoration: none;
 }
 
-* {
+/* * {
   border: 1px solid red;
-}
+} */
 
 /* header styles  */
 header {
@@ -50,7 +49,7 @@ header {
   justify-content: space-between;
 }
 .header-logo {
-  min-width: 100px;
+  min-width: 125px;
 }
 .header-logo img {
   width: 100%;
@@ -167,14 +166,12 @@ nav a {
   font-size: 2em;
   font-weight: 800;
   line-height: 1.2;
-  min-width: 376px;
   margin: 1em 0;
 }
 .hero-section-content-secondary {
   color: var(--Gray);
   font-size: 0.9rem;
   font-weight: 500;
-  min-width: 376px;
 }
 .hero-section-image {
   width: 100%;
