--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@
 body {
   color: var(--Very-Dark-Violet);
   font-family: 'Poppins', sans-serif;
+  height: 100%;
+  overflow-x: hidden;
 }
 .wrapper {
   width: 90%;
@@ -145,6 +147,7 @@ nav a {
   nav a {
     color: var(--Grayish-Violet);
     font-size: 0.9rem;
+    font-family: inherit;
     font-weight: 500;
   }
   .primary-btn-link {
@@ -158,24 +161,26 @@ nav a {
 .hero {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 .hero-section-content {
   text-align: center;
 }
 .hero-section-content-header {
-  font-size: 2em;
+  font-size: 2.2em;
   font-weight: 800;
   line-height: 1.2;
-  margin: 1em 0;
+  margin: 1.5em 0 0.6em;
 }
 .hero-section-content-secondary {
   color: var(--Gray);
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   font-weight: 500;
 }
 .hero-section-image {
   width: 100%;
   order: -1;
+  max-width: 750px;
 }
 .hero-section-image img {
   width: 100%;
@@ -183,8 +188,66 @@ nav a {
 }
 .primary-btn-link-mod {
   display: inline-block;
+  width: initial;
   padding: 0.8em 1.3em;
-  margin: 1.5em 0;
+  margin: 1.5em 0 5em;
   color: white;
   font-weight: 700;
+}
+/* * {
+  border: 1px solid red;
+} */
+.hero-bottom {
+  position: absolute;
+  bottom: -11vh;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 1em;
+  width: 100%;
+  background-color: var(--Dark-Violet);
+}
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+.form-group-input,
+.form-group-button {
+  padding: 1em 1.5em;
+  border: none;
+  border-radius: 5px;
+}
+.form-group-button {
+  margin-top: 1em;
+  background-color: var(--Cyan);
+  color: white;
+  font-weight: 700;
+}
+.form-group-button,
+.form-group-input::placeholder {
+  font-family: inherit;
+
+  font-size: 14px;
+}
+@media (min-width: 960px) {
+  .hero {
+    flex-direction: row;
+    height: 70vh;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .hero-section-image {
+    order: 0;
+    position: relative;
+    left: 30vh;
+  }
+  .hero-section-content {
+    text-align: left;
+  }
+  .hero-section-content-header {
+    font-size: 3.5rem;
+  }
+  .hero-section-content-secondary {
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
 }
